# cv-hack

ColorExtraction/: CMakeLists.txt  FolderScanner.cpp  FolderScanner.h  main.cpp
